<!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">FitActions</string>
    <string name="action_settings">Settings</string>

    <string name="start_activity_title">Start %1$s in…</string>

    <string name="stats_title">Way to GO!</string>
    <string name="stats_total_distance">%1$d\nMeters</string>
    <string name="stats_total_duration">%1$d\nMinutes</string>
    <string name="stats_total_count">%1$d\nActivities</string>
    <string name="stat_date">%1$s %2$d/%3$d</string>
    <string name="stat_duration">Duration: %1$d min</string>
    <string name="stat_distance">Distance: %1$s km</string>

    <string name="stats_tracking_distance">%1$dm</string>

    <string name="tracking_notification_title">Keep going!</string>

    <string name="activity_running">Running</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_walking">Walking</string>
    <string name="activity_unknown">Unknown</string>

    <!--Widget-->
    <string name="widget_description">This is an app widget that displays user\'s last activity</string>
    <string name="widget_title">Last Activity</string>
    <string name="widget_activity_type">%1$s</string>
    <string name="widqet_distance">Distance: %1$.2f km </string>
    <string name="widget_duration">Duration: %1$d min</string>
    <string name="widget_preview_activity_type">Exercise Type</string>
    <string name="widget_preview_distance">Distance: n/a </string>
    <string name="widget_preview_duration">Duration: n/a </string>
    <string name="widget_no_activity_speech">Couldn\'t find the last activity for %1$s.</string>
    <string name="widget_no_activity_text">No last activity found</string>
    <string name="widget_activity_speech">Your last %1$s activity was on %2$s and it was for %3$d minutes and %4$.2f kilometers.</string>
    <string name="widget_activity_text">Your last %1$s activity was on %2$s.</string>
    <string name="widget_no_data">No activity found</string>
</resources>
