<?xml version="1.0" encoding="utf-8"?>

<actions>
    <action intentName="actions.intent.START_EXERCISE">
        <fulfillment urlTemplate="https://fit-actions.firebaseapp.com/start{?exerciseType}">
            <parameter-mapping
                    intentParameter="exercise.name"
                    urlParameter="exerciseType" />
        </fulfillment>
        <!-- Map a parameter to an entity set reference -->
        <parameter name="exercise.name">
            <entity-set-reference entitySetId="ExerciseEntitySet" />
        </parameter>
    </action>

    <action intentName="actions.intent.STOP_EXERCISE">
        <fulfillment urlTemplate="https://fit-actions.firebaseapp.com/stop" />
    </action>

    <!-- Define an inline inventory -->
    <!-- This sample maps supported entities with the class FitActivity.Type -->
    <entity-set entitySetId="ExerciseEntitySet">
        <entity
                name="@string/activity_running"
                alternateName="@array/runningSynonyms"
                identifier="RUNNING" />
        <entity
                name="@string/activity_walking"
                alternateName="@array/walkingSynonyms"
                identifier="WALKING" />
        <entity
                name="@string/activity_cycling"
                alternateName="@array/cyclingSynonyms"
                identifier="CYCLING" />
    </entity-set>
</actions>
